[project]
name = "dchecker"
version = "2.1.0"
authors = [
  { name="Michael Bentz", email="mbentz@ufl.edu" },
]

description = "Data integrity checker for VIVO"
readme = "README.md"
requires-python = ">=3.6.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-dotenv==1.0.0",
]

[project.scripts]
dchecker = "dchecker:main"

[project.urls]
"Homepage" = "https://github.com/ctsit/dchecker"
"Bug Tracker" = "https://github.com/ctsit/dchecker/issues"
